# wasi-component

./: Cargo.toml  Dockerfile  Makefile  README.md  build.sh
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
